Changelog for 2.1.1
- Added support for airserv-ng
- Bugfixes (again) for $clean

Changelog for 2.1.0
- Bugfixes on terminal titles.
- Now you can especify a terminal without editing config by passing it as parameter ( airoscript terminal )
- Added patches for debian-packaging wifislax and wifiway conffile
- Added ~/.airoscript/ directory, where config can be stored, as .airoscript.screen-has-started and wordlist.
- Now it cd's to DUMP_PATH so all residual data will remain there not in `pwd`
- Added unstable functions file, and moved current one to a "external functions" file, since it requires from external binaries not aircrack-related.
- Added unstable option in menu (only appears when unstable activated on config)
- Added external functions to menu (same as unstable, only when activated on config)
- Modified paths to /usr/local/ as it should be.
- i10n upgrades for spanish.

Changelog for 2.0.12 
- Added real screen support
- Corrected lots of bugs with i10n
- Corrected bug in wlandecrypter bug
- Modified CDCMD to write in a logfile (Not working, deleted)
- Changed config so it whould not use unstable functions by default
- Corrected lots of bugs in makefile, like having 755 permisions for screenrc file, $DESTDIR problems 
- Corrected more quoting problems :-)
- Added support for jazzteldecrypter

Changelog for 2.0.11
- Changed interface. Now it looks nicer.
- Now it advises you if you don't have some optional thing installed and try to exec it. 
- It doesnt allow you to do something if you've had to do something else before and you haven't (for example, doing a selection (2) befora a scan (1)
- Corrected some bugs
- Added support for gettext
- Added support for wlandecrypter
- Added an "Auto" function
- Added a "exit" function, asking user if he wants delete temporary directory and/or stop monitor mode on selected interface.
- Code cleaned and reorganised.
- Corrected lots of things in makefile