@@ -49,6 +49,7 @@
 	ARPFORGE=$BINDIR"packetforge-ng"
 	WESSIDE=$SBINDIR"wesside-ng"
 	AIRSERV=$SBINDIR"airserv-ng"
+	TKIPTUN=$SBINDIR"tkiptun-ng"
 
 	SCREENRC="$PREFIX/share/airoscript/screenrc"
 	
@@ -125,6 +126,9 @@
 	FRAG_HOST_IP="255.255.255.255"
 	FRAG_CLIENT_IP="255.255.255.255"
 
+# Default packet size values for tkiptun-ng attack
+	TKIPTUN_MAX_PL=100
+	TKIPTUN_MIN_PL=80
 
 # You wont usually have to touch this, it's cardctl executable, automatically changed since on kernels 2.4 is carcctl and 2.6 is pccardctl
 	if [ `uname -r|cut -d . -f 2` == "6" ]; then
