@@ -1,5 +1,6 @@
 Changelog for 2.1.1
 - Added support for airserv-ng
+- Added tkiptun basic support
 - Bugfixes (again) for $clean
 
 Changelog for 2.1.0
